--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cardapio Festa Santo Expedito</title>
+  <title>Cardapio Festa Padroeira</title>
 </head>
 <body>
   <div class="menu">
@@ -21,7 +21,23 @@
           max-width: 900px;
         }
       </style>
-      <img src="./cardapio.jpeg" alt="menu" class="menuImage">
+      <img src="./cardapio_1.jpeg" alt="menu" class="menuImage">
+  </div>
+  <div class="menu">
+    <style>
+      .menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        background-color: #fff;
+      }
+      .menuImage {
+          width: 100%;
+          max-width: 900px;
+        }
+      </style>
+      <img src="./cardapio_2.jpeg" alt="menu" class="menuImage">
   </div>
 </body>
 </html>
